# backtesting-engine

./: .dockerignore  .editorconfig  .env.example  .gitignore  APPLY-FIX.ps1  APPLY-MILLION-CANDLE-FIX.ps1  BENCHMARK-MILLION-HOTPATH.py  CONTRIBUTING.md  Dockerfile  FINAL-ACCEPTANCE.json  FINAL-ACCEPTANCE.md  MILLION-CANDLE-ARCHITECTURE-FA.md  MILLION-CANDLE-FILES.txt  MILLION-CANDLE-README-FA.md  MILLION-CANDLE-VALIDATION.json  Makefile  PARITY-AUDIT.md  README-FA.md  README.md  TECHNICAL-AUDIT.md  VALIDATION.txt  VERIFY-AFTER-RUN.ps1  VERIFY-MILLION-CANDLE-FIX.ps1  compose.override.yaml.old  compose.yaml  pyproject.toml  vex-yj-parallel-chains-stop-isolation-v4.patch
benchmarks/: benchmark_broker.py
docs/: FINAL-RUNBOOK-FA.md  IMPLEMENTATION_REPORT_FA.md  PERFORMANCE_ARCHITECTURE_V2.md  VEX-1.1.0-CHART-PERFORMANCE-RUNBOOK-FA.md  VEX-1.2.0-DASHBOARD-PRO-RUNBOOK-FA.md  chart-replay-performance.md  dashboard-performance-architecture.md  docker-final-zero-to-hero.md  docker-windows-zero-to-hero.md  engine-dashboard-separation.md  external-strategy-packages.md  phase-0-acceptance.md  phase-0-contracts-and-foundation.md  phase-1-acceptance.md  phase-1-mt5-data-engine.md  phase-2-acceptance.md  phase-2-broker-simulator.md  phase-3-acceptance.md  phase-3-strategy-sdk.md  phase-4-acceptance.md  phase-4-replay-dashboard.md  phase-5-acceptance.md  phase-5-analytics.md  phase-6-acceptance.md  phase-6-mt5-compatibility-validation.md  windows-setup.md
references/: ls_topintrade_v2_simplified.pine  video-transcript-fa.txt
schemas/: analytics-comparison-report.schema.json  analytics-config.schema.json  analytics-report.schema.json  broker-simulation-report.schema.json  broker-state-snapshot.schema.json  chart-command.schema.json  chart-drawing.schema.json  data-engine-config.schema.json  data-import-report.schema.json  dataset-manifest.schema.json  event-envelope.schema.json  live-run-catalog.schema.json  live-run-control-command.schema.json  live-run-create-request.schema.json  live-run-state.schema.json  mt5-bridge-config.schema.json  mt5-compatibility-report.schema.json  mt5-compatibility-snapshot.schema.json  mt5-validation-config.schema.json  order-request.schema.json  replay-bootstrap.schema.json  replay-build-result.schema.json  replay-bundle-manifest.schema.json  replay-catalog.schema.json  replay-control-command.schema.json  (+7 more)
(+632 files in other folders)
